--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,8 +7,16 @@ nav{
 
 .menu{
   background-color: white;
+  margin-top: -30px;
+  box-shadow: 0 0 2em #111;
+  border-radius: 4px;
 }
 
 .menu-section-headers{
-  font-size: 2em;
+  font-size: 1.6em;
+  padding:0px;
+}
+
+hr {
+  box-shadow: 1px 1px 1px;
 }
